// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputColor does render 1`] = `
<div
  className="rka-form-group"
>
  <input
    className="rka-input-txt"
    disabled={true}
    name="Test"
    onClick={[Function]}
    placeholder="Hex color (default: undefined)"
    readOnly={true}
    type="text"
    value=""
  />
</div>
`;

exports[`InputColor does render 2`] = `
<div
  className="rka-form-group"
>
  <input
    className="rka-input-txt"
    disabled={true}
    name="Test"
    onClick={[Function]}
    placeholder="Hex color (default: undefined)"
    readOnly={true}
    type="text"
    value=""
  />
  <div
    data-testid="color-picker"
    onChange={[Function]}
  />
</div>
`;

exports[`InputColor provides shows defaultValue 1`] = `
<div
  className="rka-form-group"
>
  <input
    className="rka-input-txt"
    disabled={true}
    name="Test"
    onClick={[Function]}
    placeholder="Hex color (default: 000000)"
    readOnly={true}
    type="text"
    value=""
  />
</div>
`;

exports[`InputColor provides shows defaultValue 2`] = `
<div
  className="rka-form-group"
>
  <input
    className="rka-input-txt"
    disabled={true}
    name="Test"
    onClick={[Function]}
    placeholder="Hex color (default: 000000)"
    readOnly={true}
    type="text"
    value=""
  />
  <div
    data-testid="color-picker"
    onChange={[Function]}
  />
</div>
`;

exports[`InputColor provides value 1`] = `
<div
  className="rka-form-group"
>
  <input
    className="rka-input-txt"
    disabled={true}
    name="Test"
    onClick={[Function]}
    placeholder="Hex color (default: undefined)"
    readOnly={true}
    type="text"
    value="000000"
  />
</div>
`;

exports[`InputColor provides value 2`] = `
<div
  className="rka-form-group"
>
  <input
    className="rka-input-txt"
    disabled={true}
    name="Test"
    onClick={[Function]}
    placeholder="Hex color (default: undefined)"
    readOnly={true}
    type="text"
    value="000000"
  />
  <div
    data-testid="color-picker"
    onChange={[Function]}
  />
</div>
`;
